--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,9 @@
 
 .container {
   width: 80%;
-  height: 500px;
-
-  overflow-y: auto;
+  height: fit-content;
+  min-height: 300px;
+  overflow-y: scroll;
   box-shadow: 1px 1px 20px white;
   border-radius: 10px;
 }
