--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,10 @@
 
 .container {
   width: 80%;
-  height: fit-content;
-  min-height: 300px;
-  overflow-y: scroll;
+  max-width: 800px;
+  height: 400px;
+  min-height: 100px;
+  overflow-y: auto;
   box-shadow: 1px 1px 20px white;
   border-radius: 10px;
 }
@@ -36,7 +37,7 @@
 .container-header input ::placeholder {
   padding: 3px 10px;
 }
-.container-header button {
+.container-header .search-btn {
   background-color: rgb(189, 101, 189);
   border: none;
   padding: 2px;
@@ -50,3 +51,16 @@
 .data-row {
   text-align: center;
 }
+.data-row:hover{
+  width: 100%;
+  background-color: yellowgreen;
+  color: white;
+  transition: all ease 1s;
+}
+
+
+.data-row-name a{
+  text-decoration: none;
+font-weight: 600;  
+}
+
