feat:updating the input fields

--- a/src/App.css
+++ b/src/App.css
@@ -51,16 +51,53 @@
 .data-row {
   text-align: center;
 }
-.data-row:hover{
+.data-row:hover {
   width: 100%;
   background-color: yellowgreen;
   color: white;
   transition: all ease 1s;
 }
 
-
-.data-row-name a{
+.data-row-name a {
   text-decoration: none;
-font-weight: 600;  
+  font-weight: 600;
+  color: rgb(4, 85, 236);
 }
 
+.warehouse-container {
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.warehouse-header-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.warehouse-header-wrapper button {
+  padding: 5px;
+  font-size: medium;
+  border-radius: 5px;
+  outline: none;
+}
+
+.warehouse-header-wrapper-container {
+  display: flex;
+  gap: 0.5rem;
+}
+.warehouse-body-wrapper-container {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  
+}
+input {
+  padding: 5px;
+  outline: none;
+}
+
+label {
+  font-size: larger;
+  font-weight: bold;
+}
